+ added sidecar functionality for process management * split internal classes from ProcessUtils