@@ -56,7 +56,11 @@ public class JIPipeOrasRemoteArtifactSource extends JIPipeRemoteArtifactSource{
     public Path downloadArchive(JIPipeArtifactOperationContext context, Path tmpPath, JIPipeProgressInfo progressInfo) {
         OrasEnvironment orasEnvironment = JIPipe.getArtifacts().getOrasEnvironment(context, progressInfo.resolveAndLog("Configure ORAS"));
         progressInfo.log("Downloading using ORAS from " + ociReference + " ...");
-        orasEnvironment.runExecutable(List.of("pull", "--output", tmpPath.toString(), ociReference), Collections.emptyMap(), false, progressInfo);
+        orasEnvironment.runExecutable(List.of("pull", "--output", tmpPath.toString(), ociReference),
+                Collections.emptyMap(),
+                false,
+                Collections.emptyList(),
+                progressInfo);
         return PathUtils.findFileByExtensionRecursivelyIn(tmpPath, ".zip", ".tar.gz", ".tar.bz2", ".tar.xz");
     }
 
